--- a/app-web-escuela/src/main/resources/templates/login.html
+++ b/app-web-escuela/src/main/resources/templates/login.html
@@ -33,7 +33,16 @@
 				<button type="submit" class="btn btn-info form-control">Enviar</button>
 			</div>
 		</form>
-		
+		<div class="row">
+			<div class="col-md-10"></div>
+			<div class="col-md-2">
+				<label class="form-label">&nbsp;</label> <a
+					class="btn btn-warning form-control" th:href=@{/usuario/new}>Crear
+					nuevo Usuario</a>
+
+			</div>
+		</div>
+
 		<!-- Mostrar mensaje de error si la contraseña es incorrecta -->
 		<div class="row" th:if="${error}">
 			<div class="col-md-12">
