--- a/app-web-escuela/src/main/resources/templates/crear_alumno.html
+++ b/app-web-escuela/src/main/resources/templates/crear_alumno.html
@@ -11,25 +11,7 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-lg bg-body-tertiary">
-		<div class="container-fluid">
-			<a class="navbar-brand" th:href=@{/menu}>Escuela Keepcoding</a>
-			<button class="navbar-toggler" type="button"
-				data-bs-toggle="collapse" data-bs-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link"
-						aria-current="page" th:href=@{/menu}>Home</a></li>
-					<li class="nav-item"><a class="nav-link active"
-						th:href=@{/alumno/new}>Nuevo Alumno</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+	<div th:include="fragments/menu_navegacion :: menu"></div>
 	
 	<div class="container">
 		<div class="row">
