--- a/app-web-escuela/src/main/resources/templates/fragments/menu_navegacion.html
+++ b/app-web-escuela/src/main/resources/templates/fragments/menu_navegacion.html
@@ -3,9 +3,10 @@
 <head>
     <title>Fragmentos</title>
 </head>
+
 <body>
     <div th:fragment="menu">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg barra_navegacion">
             <div class="container-fluid">
                 <a class="navbar-brand" th:href="@{/menu}">Escuela Keepcoding</a>
                 <button class="navbar-toggler" type="button"
@@ -16,7 +17,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link active"
+                        <li class="nav-item"><a class="nav-link"
                             aria-current="page" th:href="@{/menu}">Home</a></li>
                         <li class="nav-item"><a class="nav-link"
                             th:href="@{/alumno/new}">Nuevo Alumno</a></li>
