--- a/app-web-escuela/src/main/resources/templates/login.html
+++ b/app-web-escuela/src/main/resources/templates/login.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org/">
-<head>
-<meta charset="UTF-8">
-<title>Escuela Keepcoding</title>
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-	crossorigin="anonymous">
-</head>
+<head th:include="fragments/cabecera :: cabecera"></head>
 <body>
 
 	<div class="container">
@@ -30,14 +22,14 @@
 			</div>
 			<div class="col-md-12">
 				<label class="form-label">&nbsp;</label>
-				<button type="submit" class="btn btn-info form-control">Enviar</button>
+				<button type="submit" class="btn btn-warning form-control">Enviar</button>
 			</div>
 		</form>
 		<div class="row">
 			<div class="col-md-10"></div>
 			<div class="col-md-2">
 				<label class="form-label">&nbsp;</label> <a
-					class="btn btn-warning form-control" th:href=@{/usuario/new}>Crear
+					class="btn btn-danger form-control" th:href=@{/usuario/new}>Crear
 					nuevo Usuario</a>
 
 			</div>
