Escuela Keepcoding - Definitivo

--- a/app-web-escuela/src/main/resources/templates/crear_usuario.html
+++ b/app-web-escuela/src/main/resources/templates/crear_usuario.html
@@ -22,7 +22,7 @@
 								placeholder="Escriba un email valido" required>
 						</div>
 						<div class="form-group">
-							<label>Usuario:</label> <input type="text" name="username"
+							<label>Usuario de acceso:</label> <input type="text" name="username"
 								th:field="*{username}" class="form-control"
 								placeholder="Escriba el Usuario de acceso" required>
 						</div>
